# Team-Intelligence-Platform

./:  GOVERNANCE.md  .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  PITCH.md  README.md  TODO.md  docker-compose.yml  generate_certificates.sh
docs/: apexfusion-conceptanddesignguidelines.md  apexfusion-rituals-and-practices.md  apexfusion-slideset.md  apexfusion-templates-libary.md  apexfusion-workflow-libary.md  clarityedge-conceptdesignguidelines.md  clarityedge-rituals-and-practices.md  clarityedge-slideset.md  clarityedge-templates-library.md  lacm-slideset.md  (+42 more)
ulacm_backend/: .env.example  Dockerfile  init_db.sql  pyproject.toml
ulacm_backend/app/: main.py
ulacm_backend/app/api/v1/: api.py  deps.py
ulacm_backend/app/api/v1/endpoints/: admin_teams.py  ai_tools.py  auth.py  content_items.py  search.py  versions.py  workflows_exec.py
ulacm_backend/app/core/: config.py  limiter.py  logging_config.py  security.py
ulacm_backend/app/crud/: __init__.py  base.py  crud_content_item.py  crud_content_version.py  crud_search.py  crud_team.py
ulacm_backend/app/db/: base_class.py  database.py
ulacm_backend/app/db/models/: __init__.py  content_item.py  content_version.py  document_chunk.py  team.py
ulacm_backend/app/schemas/: __init__.py  ai_tools.py  content_item.py  content_version.py  msg.py  team.py  token.py  workflow_definition.py
ulacm_backend/app/services/: __init__.py  embedding_service.py  ollama_service.py  retrieval_service.py  workflow_parser.py  workflow_service.py
ulacm_backend/postgres_conf/: pg_hba.conf
ulacm_backend/tests/: __init__.py  conftest.py
ulacm_backend/tests/api/: __init__.py  test_main.py
ulacm_backend/tests/core/: test_security.py
ulacm_backend/tests/crud/: test_crud_content_item.py  test_crud_content_version.py  test_crud_search.py  test_crud_team.py
ulacm_backend/tests/db/: test_models.py
ulacm_backend/tests/services/: __init__.py  test_ollama_service.py  test_retrieval_service.py  test_workflow_parser.py  test_workflow_service.py
(+48 files in other folders)
